# Sentinel-AI

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md   Dockerfile  Dockerfile-bak  LICENSE.md  MERMAID DIAGRAM.md  Makefile  README.md  README_(non-technical-users).md  Sentinel Pitch deck.html  Sentinel_AI_Complete.txt  docker-compose-bak.yml  docker-compose.yml  generate_protos.sh  gitignore  index.html  main.py  progress(07-10-25).md  pyproject.toml  remaining.md  requirements.txt  tree
.github/: dependabot.yml
.github/workflows/: azure-functions-app-nodejs.yml  ci.yml  grafana-lint.yml  helm-ci.yml  helm.yml  ingest-smoke.yml  lint-env.yml  release.yml  validate-dashboards.yml
advanced/: __init__.py  continuous_learning.py  fusion_module.py  multiagent_module.py  personalization.py  temporal_module.py  topology_module.py
api/: advanced_routes.py  dependencies.py  models.py  routes.py
assets/: Sentinel-AI_Pitch-Deck.html  infographic.html
ast_parser/: Cargo.toml  Dockerfile  build.rs
ast_parser/src/: ast_processor.rs  main.rs  proto_client.rs
core/: attack_tree.py  config.py  exceptions.py  executor.py  ingestion_service.py  l0_cache.py  l1_redis.py  l2_chroma.py  l2_weaviate.py  l3_git.py  logging.py  manager.py  metrics.py  reasoning.py  reflection.py  rules.py  spec_check.py  utils.py
docs/: SentinelAI.postman_collection.json  advanced_features.md  architecture.md  attack_tree.md  knowledge_graph.md  reasoning_engine.md  reflection.md  rules.md  rules_and_reflection.md  schema.md
docs/dashboards/: ingestion-overview.json  rag-latency.json  sample-grafana-dashboard.json
etl/: __init__.py  schema.py
examples/: sentinelai_client.py
frontend/: Dockerfile  package.json
frontend/src/pages/: index.tsx
frontend/src/pages/api/: [...path].ts
frontend/src/styles/: Home.module.css
go_weaviate_proxy/: Dockerfile  go.mod  main.go
go_weaviate_proxy/pkg/service/: ast_service.go
go_weaviate_proxy/pkg/weaviate_client/: client.go
graphs/: knowledge_graph.py
helm/: Chart.yaml  values.yaml
memory/: vector_store.py
memory/data-repo/sample-docs/: readme.md
orchestrator/: Dockerfile  main.py  pyproject.toml
orchestrator/api/: models.py  routes.py
orchestrator/core/: config.py  grpc_client.py  logging.py  rag.py  workflow.py
proto/: ast_schemas.proto  ast_service.proto
scripts/: env_lint.sh  generate_schema.py
tests/: conftest.py  test_advanced_api.py  test_api.py  test_attack_tree.py  test_ingest.py  test_knowledge_graph.py  test_reasoning.py  test_rules_reflection.py  test_vector_store.py
tools/: generate_schema.py  ingest_git_repo.py  init_weaviate_schema.py
