[tool.poetry]
name = "sentinel-memory-service"
version = "1.0.0"
description = "A production-grade, multi-layered memory system for AI agents."
authors = ["Douglas Mitchell DouglasMitchell@HoustonOilAirs.org"]
readme = "README.md"
packages = [{include = "core"}, {include = "api"}, {include = "tools"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
redis = {extras = ["hiredis"], version = "^6.2.0"}
weaviate-client = "^4.16.3"
chromadb = "^1.0.15"
gitpython = "^3.1.45"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
cachetools = "^6.1.0"
numpy = "<3.0"
networkx = "^3.5"
anytree = "^2.13.0"
gunicorn = "^23.0.0" # For production deployment
prometheus-client = "^0.22.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1" # For async testing of the API
mypy = "^1.10.0"
flake8 = "^7.0.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
