[package]
name = "ast_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
# For AST parsing - add more languages as needed
tree-sitter = "0.22.1"
tree-sitter-python = "0.21.0"
tree-sitter-javascript = "0.21.0"
tree-sitter-rust = "0.21.0"

# For gRPC communication
tonic = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3" # For google.protobuf.Any

# Async runtime and utilities
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3"

# Parallel processing
rayon = "1.10.0"

# Logging and Error Handling
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.82"

# UUID generation
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.11.0"